--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </div>
       </div>
 
-      <div id="forecastContainer" class="row row-cols-1 row-cols-md-3 g-4">
+      <div id="forecastContainer" class="row row-cols-1 row-cols-sm-3 g-4">
         
         <!-- Weather Forecast Here -->
-        
+
       </div>
 
     </section>
