--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>ForeCast</title>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"
@@ -38,12 +38,14 @@
           </div>
         </div>
       </div>
-
-      <div id="forecastContainer" class="row row-cols-1 row-cols-sm-3 g-4">
+      
+      <div class="weather-container">
+      <div id="forecastContainer" class="row row-cols-1 row-cols-md-3 g-4 ">
         
         <!-- Weather Forecast Here -->
 
       </div>
+    </div>
 
     </section>
 
