--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     />
   </head>
   <body>
-    <section class="vh-100">
+    <section>
       <div class="container">
         <div class="row d-flex justify-content-center align-items-center">
           <div class="col-md-8 col-lg-6 col-xl-4">
-            <h2 class="mb-4 pb-2 fw-normal text-center fw-bold">
+            <h2 class="mb-2 mt-2 fw-normal text-center fw-bold">
               Weather Forecast
             </h2>
 
@@ -26,13 +26,13 @@
               />
               <button
                 id="search-btn"
-                class="input-group-text border-0 fw-bold mx-1 btn btn-success"
+                class="input-group-text border-0 mx-1 btn btn-success"
                 onclick="getForecastData()"
               >
                 Get Weather
               </button>
             </div>
-            <h5 class="mb-4 pb-2 fw-normal text-center fw-bold">
+            <h5 class="mb-2 pb-2 fw-normal text-center fw-bold">
               Hourly Forecast for Today
             </h5>
           </div>
