--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="weather">
       <div class="container">
         <div class="row d-flex justify-content-center align-items-center">
-          <div class="col-md-8 col-lg-6 col-xl-4">
+          <div class="col-sm-12 col-md-8 col-lg-6 col-xl-4">
             <h2 class="mb-2 mt-2 fw-normal text-center fw-bold">
               Weather Forecast
             </h2>
