--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="weather-container">
       <div id="forecastContainer" class="row row-cols-1 row-cols-md-3 g-4 ">
         
-        <!-- Weather Forecast Here -->
+        <!-- Weather Forecast Here from JS-->
 
       </div>
     </div>
