--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h3 class="mb-2 mt-5 fw-normal text-center fw-bold">
               Weekly Forecast with graph
             </h3>
-            <div>
+            <div id="myChartArea">
               <canvas id="myChart" class="container-auto mt-2 mb-5"></canvas>
             </div>
           </div>
